Labs/Lab3/deploy_rollingupdate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myweb-deploy
spec:
  selector:
    matchLabels:
      app: myweb
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 20%
      maxSurge: 20%
  template:
    metadata:
      labels:
        app: myweb
    spec:
      containers:
      - image: <your registry>/myweb:2.0
        name: myweb-container
        ports:
        - containerPort: 80
