Labs/Lab3/mygame_app_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mygame-app
  labels:
    app: mygame-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mygame-app
  template:
    metadata:
      labels:
        app: mygame-app
    spec:
      containers:
      - name: mygame-app
        image: <your registry>/mygame-app:1.0
        ports:
        - containerPort: 8000
