Labs/Lab3/mygame_db_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mygame-db
  labels:
    app: mygame-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mygame-db
  template:
    metadata:
      labels:
        app: mygame-db
    spec:
      containers:
      - name: mygame-db
        image: <your registry>/mygame-db
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mygame-initdb-config
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mygame-initdb-config
        configMap:
          name: mygame-initdb-config
          items:
          - key: init.sql
            path: init.sql
