Labs/Lab3/mygame_db_pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mygame-db
  namespace: default
  labels:
    app: mygame-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mygame-db
  template:
    metadata:
      labels:
        app: mygame-db
    spec:
      nodeSelector:
        kubernetes.io/hostname: edu99-cluster.worker01
      containers:
      - name: mygame-db
        image: <your registry>/mygame-db
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mygame-initdb-config
          mountPath: /docker-entrypoint-initdb.d
        - name: mygame-db-storage
          mountPath: /var/lib/mysql  # 데이터베이스 데이터를 저장할 경로
      volumes:
      - name: mygame-initdb-config
        configMap:
          name: mygame-initdb-config
          items:
          - key: init.sql
            path: init.sql
      - name: mygame-db-storage
        persistentVolumeClaim:
          claimName: mygame-db-pvc
