Labs/Lab3/pod_multi.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-pod
spec:
  containers:
  - name: nginx-container
    image: nginx:1.14
    ports:
    - containerPort: 80
  - name: ubuntu-container
    image: ubuntu:22.04
    command:
    - sleep
    - "10000"
