Labs/Lab3/mygame_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mygame-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: mygame-app
spec:
  ingressClassName: nginx
  rules:
  - host: mygame.211-34-229-117.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mygame-app-service
            port:
              number: 80
